ingress/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: ingress
spec:
  selector:
    app: nginx-ingress
  ports:
    - protocol: TCP
      port: 80       # Port exposé par le Service
      targetPort: 80 # Port du conteneur NGINX
  type: ClusterIP  # Accessible uniquement dans le cluster
